# directx12_compute_shader_example

./: CMakeLists.txt  README.md  main.cpp  pch.h
.github/workflows/: build.yaml
shader/: compute.hlsl
